k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: spekt8-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    component: spekt8-app
  type: ClusterIP
