k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: spekt8-app
  name: spekt8-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: spekt8-svc
            port:
              number: 80
        path: /spekt8(/|$)(.*)
        pathType: Prefix
